--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router": "^6.4.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
